[gd_scene load_steps=7 format=2]

[ext_resource path="res://Fonts/Big Pixel Light demo.otf" type="DynamicFontData" id=1]
[ext_resource path="res://Assetts/Coin.png" type="Texture" id=2]
[ext_resource path="res://Shop/Shop.gd" type="Script" id=3]
[ext_resource path="res://Fonts/default_font.tres" type="DynamicFont" id=4]

[sub_resource type="DynamicFont" id=1]
size = 8
font_data = ExtResource( 1 )

[sub_resource type="Theme" id=2]
default_font = SubResource( 1 )

[node name="Shop" type="Node2D"]
script = ExtResource( 3 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Control"]
anchor_right = 1.0
anchor_bottom = 1.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CanvasLayer/Control/VBoxContainer"]
margin_top = 7.0
margin_right = 256.0
margin_bottom = 19.0
text = "Home Goods"
align = 1

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/Control/VBoxContainer"]
margin_top = 23.0
margin_right = 256.0
margin_bottom = 73.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="CanvasLayer/Control/VBoxContainer/HBoxContainer"]
margin_left = 49.0
margin_right = 99.0
margin_bottom = 50.0
rect_min_size = Vector2( 50, 50 )

[node name="CenterContainer" type="CenterContainer" parent="CanvasLayer/Control/VBoxContainer/HBoxContainer/ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="VBoxContainer" parent="CanvasLayer/Control/VBoxContainer/HBoxContainer/ColorRect/CenterContainer"]
margin_left = 7.0
margin_top = 9.0
margin_right = 42.0
margin_bottom = 40.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CanvasLayer/Control/VBoxContainer/HBoxContainer/ColorRect/CenterContainer/HBoxContainer"]
margin_right = 35.0
margin_bottom = 9.0
custom_fonts/font = ExtResource( 4 )
text = "Medicine"
align = 1
valign = 1

[node name="BuyMedicine" type="Button" parent="CanvasLayer/Control/VBoxContainer/HBoxContainer/ColorRect/CenterContainer/HBoxContainer"]
margin_top = 13.0
margin_right = 35.0
margin_bottom = 31.0
text = "30g"

[node name="ColorRect2" type="ColorRect" parent="CanvasLayer/Control/VBoxContainer/HBoxContainer"]
margin_left = 103.0
margin_right = 153.0
margin_bottom = 50.0
rect_min_size = Vector2( 50, 0 )

[node name="CenterContainer2" type="CenterContainer" parent="CanvasLayer/Control/VBoxContainer/HBoxContainer/ColorRect2"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="VBoxContainer" parent="CanvasLayer/Control/VBoxContainer/HBoxContainer/ColorRect2/CenterContainer2"]
margin_left = 7.0
margin_top = 9.0
margin_right = 42.0
margin_bottom = 40.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CanvasLayer/Control/VBoxContainer/HBoxContainer/ColorRect2/CenterContainer2/HBoxContainer"]
margin_right = 35.0
margin_bottom = 9.0
custom_fonts/font = ExtResource( 4 )
text = "Blankets"
align = 1
valign = 1

[node name="BuyBlankets" type="Button" parent="CanvasLayer/Control/VBoxContainer/HBoxContainer/ColorRect2/CenterContainer2/HBoxContainer"]
margin_top = 13.0
margin_right = 35.0
margin_bottom = 31.0
text = "30g"

[node name="ColorRect3" type="ColorRect" parent="CanvasLayer/Control/VBoxContainer/HBoxContainer"]
margin_left = 157.0
margin_right = 207.0
margin_bottom = 50.0
rect_min_size = Vector2( 50, 0 )

[node name="CenterContainer3" type="CenterContainer" parent="CanvasLayer/Control/VBoxContainer/HBoxContainer/ColorRect3"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="VBoxContainer" parent="CanvasLayer/Control/VBoxContainer/HBoxContainer/ColorRect3/CenterContainer3"]
margin_left = 11.0
margin_top = 9.0
margin_right = 38.0
margin_bottom = 40.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CanvasLayer/Control/VBoxContainer/HBoxContainer/ColorRect3/CenterContainer3/HBoxContainer"]
margin_right = 27.0
margin_bottom = 9.0
custom_fonts/font = ExtResource( 4 )
text = "Food"
align = 1
valign = 1

[node name="BuyFood" type="Button" parent="CanvasLayer/Control/VBoxContainer/HBoxContainer/ColorRect3/CenterContainer3/HBoxContainer"]
margin_top = 13.0
margin_right = 27.0
margin_bottom = 31.0
text = "30g"

[node name="Label2" type="Label" parent="CanvasLayer/Control/VBoxContainer"]
margin_top = 77.0
margin_right = 256.0
margin_bottom = 89.0
text = "Upgrades"
align = 1

[node name="HBoxContainer2" type="HBoxContainer" parent="CanvasLayer/Control/VBoxContainer"]
margin_top = 93.0
margin_right = 256.0
margin_bottom = 143.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="CanvasLayer/Control/VBoxContainer/HBoxContainer2"]
margin_left = 49.0
margin_right = 99.0
margin_bottom = 50.0
rect_min_size = Vector2( 50, 50 )

[node name="CenterContainer4" type="CenterContainer" parent="CanvasLayer/Control/VBoxContainer/HBoxContainer2/ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="VBoxContainer" parent="CanvasLayer/Control/VBoxContainer/HBoxContainer2/ColorRect/CenterContainer4"]
margin_left = 11.0
margin_top = 9.0
margin_right = 38.0
margin_bottom = 40.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CanvasLayer/Control/VBoxContainer/HBoxContainer2/ColorRect/CenterContainer4/HBoxContainer"]
margin_right = 27.0
margin_bottom = 9.0
custom_fonts/font = ExtResource( 4 )
text = "HP Up"
align = 1
valign = 1

[node name="HPUpg" type="Button" parent="CanvasLayer/Control/VBoxContainer/HBoxContainer2/ColorRect/CenterContainer4/HBoxContainer"]
margin_top = 13.0
margin_right = 27.0
margin_bottom = 31.0
text = "30g"

[node name="ColorRect2" type="ColorRect" parent="CanvasLayer/Control/VBoxContainer/HBoxContainer2"]
margin_left = 103.0
margin_right = 153.0
margin_bottom = 50.0
rect_min_size = Vector2( 50, 50 )

[node name="CenterContainer5" type="CenterContainer" parent="CanvasLayer/Control/VBoxContainer/HBoxContainer2/ColorRect2"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="VBoxContainer" parent="CanvasLayer/Control/VBoxContainer/HBoxContainer2/ColorRect2/CenterContainer5"]
margin_left = 11.0
margin_top = 9.0
margin_right = 38.0
margin_bottom = 40.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CanvasLayer/Control/VBoxContainer/HBoxContainer2/ColorRect2/CenterContainer5/HBoxContainer"]
margin_right = 27.0
margin_bottom = 9.0
custom_fonts/font = ExtResource( 4 )
text = "ATK Up"
align = 1
valign = 1

[node name="ATKUpg" type="Button" parent="CanvasLayer/Control/VBoxContainer/HBoxContainer2/ColorRect2/CenterContainer5/HBoxContainer"]
margin_top = 13.0
margin_right = 27.0
margin_bottom = 31.0
text = "30g"

[node name="ColorRect3" type="ColorRect" parent="CanvasLayer/Control/VBoxContainer/HBoxContainer2"]
margin_left = 157.0
margin_right = 207.0
margin_bottom = 50.0
rect_min_size = Vector2( 50, 50 )

[node name="CenterContainer6" type="CenterContainer" parent="CanvasLayer/Control/VBoxContainer/HBoxContainer2/ColorRect3"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="VBoxContainer" parent="CanvasLayer/Control/VBoxContainer/HBoxContainer2/ColorRect3/CenterContainer6"]
margin_left = 8.0
margin_top = 9.0
margin_right = 42.0
margin_bottom = 40.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CanvasLayer/Control/VBoxContainer/HBoxContainer2/ColorRect3/CenterContainer6/HBoxContainer"]
margin_right = 34.0
margin_bottom = 9.0
custom_fonts/font = ExtResource( 4 )
text = "Sword Up"
align = 1
valign = 1

[node name="SWDUpg" type="Button" parent="CanvasLayer/Control/VBoxContainer/HBoxContainer2/ColorRect3/CenterContainer6/HBoxContainer"]
margin_top = 13.0
margin_right = 34.0
margin_bottom = 31.0
text = "30g"

[node name="DoneButton" type="Button" parent="CanvasLayer/Control"]
margin_left = 210.0
margin_top = 129.0
margin_right = 254.0
margin_bottom = 147.0
text = "Done"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CoinImage" type="TextureRect" parent="CanvasLayer/Control"]
margin_right = 16.0
margin_bottom = 16.0
texture = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CoinTotal" type="Label" parent="CanvasLayer/Control"]
margin_left = 3.05129
margin_top = 2.7739
margin_right = 43.0513
margin_bottom = 14.7739
text = "21"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="CanvasLayer/Control/VBoxContainer/HBoxContainer/ColorRect/CenterContainer/HBoxContainer/BuyMedicine" to="." method="_on_BuyMedicine_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/VBoxContainer/HBoxContainer/ColorRect2/CenterContainer2/HBoxContainer/BuyBlankets" to="." method="_on_BuyBlankets_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/VBoxContainer/HBoxContainer/ColorRect3/CenterContainer3/HBoxContainer/BuyFood" to="." method="_on_BuyFood_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/VBoxContainer/HBoxContainer2/ColorRect/CenterContainer4/HBoxContainer/HPUpg" to="." method="_on_HPUpg_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/VBoxContainer/HBoxContainer2/ColorRect2/CenterContainer5/HBoxContainer/ATKUpg" to="." method="_on_ATKUpg_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/VBoxContainer/HBoxContainer2/ColorRect3/CenterContainer6/HBoxContainer/SWDUpg" to="." method="_on_SWDUpg_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/DoneButton" to="." method="_on_DoneButton_pressed"]
